tests/ui/implied-bounds/implied-bounds-on-external-params-1.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/implied-bounds-on-external-params-1.rs:6:5
   |
LL |     Wrap(x);
   |     ^^^^^^^
   |     |
   |     the parameter type `T` must be valid for the static lifetime...
   |     ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | fn error1<T: 'static>(x: T) {
   |            +++++++++

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/implied-bounds-on-external-params-1.rs:17:5
   |
LL |     || Wrap(x);
   |     ^^^^^^^^^^
   |     |
   |     the parameter type `T` must be valid for the static lifetime...
   |     ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | fn error2<T: 'static>(x: T) {
   |            +++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0310`.
